force-app/main/default/objects/Pago__c/Pago__c.object-meta.xml
<CustomObject>
    <description>Entidad que modela un pago realizado sobre un expediente. Modela los pagos telemático a través de la comunidad así como los pagos físicos en oficinas.</description>
    <label>Pago</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Número de Pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>