force-app/main/default/objects/Pago__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <description>Concepto al que está asociado el pago. Por defecto, provisión de fondos (PF)</description>
    <label>Concepto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
                <default>true</default>
                <label>PF</label>
            </value>
            <value>
                <fullName>Acuerdo</fullName>
            </value>
            <value>
                <fullName>Desistimiento</fullName>
            </value>
            <value>
                <fullName>Venia</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Extrajudicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>