force-app/main/default/objects/Pago__c/fields/Enviada_Factura_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Enviada_Factura_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica que la factura del Pago se ha enviado desde SAGE correctamente.</description>
    <label>Enviada Factura Cliente</label>
    <type>Checkbox</type>
</CustomField>