force-app/main/default/objects/Pago__c/fields/EnviadoSQLServer__c.field-meta.xml
<CustomField>
    <fullName>EnviadoSQLServer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Los pagos que son enviados a través de ETL a SQL Server se marcan para que solo se envíe la información una única vez</description>
    <label>Enviado a SQL Server</label>
    <type>Checkbox</type>
</CustomField>