force-app/main/default/objects/Pago__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado del pago realizado a la hora de realizar una contratación de un producto</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
                <isActive>false</isActive>
                <label>Emitida</label>
            </value>
            <value>
                <fullName>Pago parcial</fullName>
                <isActive>false</isActive>
                <label>Pago parcial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>