force-app/main/default/objects/Pago__c/fields/Expediente__c.field-meta.xml
<CustomField>
    <fullName>Expediente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Expediente asociado al pago</description>
    <label>Expediente</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>