force-app/main/default/objects/Pago__c/fields/NumeroFactura__c.field-meta.xml
<CustomField>
    <fullName>NumeroFactura__c</fullName>
    <description>Número de la factura que tiene SAGE</description>
    <label>Número de factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>