force-app/main/default/objects/Pago__c/fields/NumPagoFormula__c.field-meta.xml
<CustomField>
    <fullName>NumPagoFormula__c</fullName>
    <description>Mostrará el Número de pago para poder quitar el enlace al registro</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Pago</label>
    <type>Text</type>
</CustomField>