force-app/main/default/objects/Pago__c/fields/PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotal__c</fullName>
    <description>Precio pagado por el cliente para la contratación de un producto.</description>
    <label>Importe Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>